[package]
name = "cef-simple"
version = "0.3.0"
authors = ["Kenton Hamaluik <kenton@rehabtronics.com>"]
edition = "2018"
build = "build.rs"
description = "Small library / bindings for CEF in Rust"
repository = "https://github.com/hamaluik/cef-simple"
readme = "README.md"
keywords = ["cef", "chromium"]
categories = ["api-bindings", "external-ffi-bindings"]
license = "MIT/Apache-2.0"

[dependencies]
libc = "0.2"
log = "0.4"

[build-dependencies]
bindgen = "0.51"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["libloaderapi"] }
